Fixed ripple overflowing on links

--- a/src/app/components/buttons/_buttons.scss
+++ b/src/app/components/buttons/_buttons.scss
@@ -71,6 +71,10 @@
 	& i[class^='fa'] {
 		pointer-events: none;
 	}
+
+	&:is(a) {
+		display: inline-block;
+	}
 }
 
 // A button that is completely empty with no special effects.
